<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mywings.justolm.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:hint="@string/enter_first_name" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/middle_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:hint="@string/enter_middle_name" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/last_name"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:hint="@string/enter_last_name" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/date_of_birth"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:focusable="false"
            android:hint="@string/select_date_of_birth" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/txtGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:entries="@array/gender" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:hint="@string/enter_address" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/country"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/txtCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:entries="@array/country" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pin_code"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:hint="@string/enter_pin_code" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/email_registration"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mobile"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_controlshape"
            android:hint="Enter mobile number"
            android:inputType="number" />


    </LinearLayout>


</ScrollView>
